# RustRecall

./: .gitignore  README.md  recall.py
recall/: Cargo.toml  import.py  install.sh  recall-fts5.patch  recall.py  recall.py.pak  recall.py.pak1
recall/src/: app.rs  db.rs  main.rs  models.rs  ui.rs
