[package]
name = "recall"
version = "0.1.0"
edition = "2021"
description = "Terminal knowledge base with fuzzy search"

[[bin]]
name = "recall"
path = "src/main.rs"

[dependencies]
ratatui        = "0.28"
crossterm      = "0.27"
rusqlite       = { version = "0.31", features = ["bundled"] }
fuzzy-matcher  = "0.3"
chrono         = "0.4"
clap           = { version = "4", features = ["derive"] }
anyhow         = "1"
